Changes at test to include jquery and jqunit libraries

--- a/test/test.html
+++ b/test/test.html
@@ -15,9 +15,9 @@
 
   
   <script type="text/javascript" src="libs/jquery-2.1.1.min.js" ></script>
-  <script src="libs/qunit-1.15.0.js"></script>
+  <script type="text/javascript" src="libs/qunit-1.15.0.js"></script>
   <script type="text/javascript" src="../paginator.js"></script>
-  <script src="tests.js"></script>
+  <script type="text/javascript" src="tests.js"></script>
 
 </body>
 </html>
